# project-fastnotes

./: README.md  alembic.ini  main.py  pyproject.toml  sqlite.db
alembic/: README  env.py  script.py.mako
alembic/versions/: 62818f7e8118_create_notes_table.py  b9977b18e715_create_notes_table.py
app/: main.py  models.py
app/db/: base.py  config.py
app/notes/: models.py  schemas.py  services.py
