[project]
name = "fastnotes-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "fastapi[standard]>=0.120.2",
    "scalar-fastapi>=1.4.3",
    "sqlalchemy[asyncio]>=2.0.44",
]
